syntax = "proto3";

package adopter;

message SetResourceRequest {
    bytes payload = 1;
    string commit = 2;
}

message SetAuthorityRequest {
    bytes payload = 1;
    string auth_org_id = 2;
}